--- a/.gitignore
+++ b/.gitignore
@@ -1,67 +1,58 @@
-# Build output
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+# vendor/
+
+# Go workspace file
+go.work
+
+# Build artifacts
 dist/
 build/
-*.js.map
 
-# Node.js dependencies
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# TypeScript
-*.tsbuildinfo
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# IDE/Editor files
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
 
 # Logs
-logs/
 *.log
+debug-*.log
 
-# Runtime data
-pids/
-*.pid
-*.seed
-*.pid.lock
+# Environment variables
+.env
+.env.local
+.env.development
+.env.test
+.env.production
 
-# Coverage directory used by tools like istanbul
-coverage/
-*.lcov
+# Coverage reports
+coverage.out
+coverage.html
 
-# Dependency directories
-jspm_packages/
+# Mac OS
+.DS_Store
 
-# Optional npm cache directory
-.npm
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
 
-# Optional eslint cache
-.eslintcache
-
-# Replit specific
-.replit
-.upm/
+# Linux
+*~
 
 # Temporary files
-tmp/
-temp/
+*.tmp
+*.temp
